# eddi

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  MSGSRV_QUICKSTART.md  PR_DESCRIPTION.md  README.md  TASK2.md  TASK3.md  TOOLS_AUDIT.md  TOR-MESSAGING.md  build.sh  connect-client.sh  create-and-merge-fix-pr.sh  create-and-merge-pr-auto.sh  create-and-merge-pr.sh  docker-compose.yml  eddi-cleanup  eddi-connect  eddi-server  launch-server.sh  run-tests.sh  run.sh  start-server.sh  tor-connect.sh
deployment/config/: config.env.example
deployment/systemd/: eddi.service
docs/: GEMINI.md  MESSAGE_SERVER.md  PR-SCRIPTS-README.md  SECURITY.md  TASK4.md  TESTING.md  TOR_INTEGRATION.md  UDS_CONFIGURATION.md
scripts/: demo-msgsrv.sh  eddi-msgsrv  run-tor-check.sh  test-msgsrv.sh
src/: lib.rs  main.rs  process.rs
src/msgserver/: broker.rs  cli.rs  client.rs  commands.rs  handshake.rs  message.rs  mod.rs  server.rs  storage.rs  tor.rs
test-apps/flask-demo/: .gitignore  README.md  app.py
test-apps/flask-demo/templates/: about.html  base.html  index.html  view.html
tests/: integration_tests.rs  msgserver_tests.rs  network_isolation_test.rs  process_tests.rs  test_utils.rs  tor_check_tests.rs
