[package]
name = "eddi"
version = "0.1.0"
edition = "2021"
authors = ["marctjones"]
description = "A secure, self-contained application launcher that exposes web apps only as Tor hidden services"
license = "MIT OR Apache-2.0"

[dependencies]
# Arti - Tor implementation in Rust
arti-client = "0.36"
tor-rtcompat = "0.36"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server for the hidden service
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
hyper-util = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# For testing
tempfile = "3.8"
