[package]
name = "eddi"
version = "0.1.0"
edition = "2021"
authors = ["marctjones"]
description = "A secure, self-contained application launcher that exposes web apps only as Tor hidden services"
license = "MIT OR Apache-2.0"

[dependencies]
# Arti - Tor implementation in Rust
arti-client = { version = "0.36", features = ["onion-service-service", "onion-service-client"] }
tor-rtcompat = "0.36"
tor-hsservice = "0.36"
tor-proto = "0.36"
tor-cell = "0.36"
safelog = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# HTTP server for the hidden service
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
hyper-util = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization for key persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Message server dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rand = "0.8"

[dev-dependencies]
# For testing
tempfile = "3.8"
